# Conflicts: #	pandocomatic.yaml

--- a/defaults/docx.yaml
+++ b/defaults/docx.yaml
@@ -1,8 +1,10 @@
+standalone: true
 from: markdown
 to: docx
-standalone: true
+output-file: Out.docx
 filters:
   #- removeHR #remove horizontal rules
-  - prependAll # prepends institute:, comments: and keywords: metadata into the text
-  - simplifyMetadata #collapse down metadata "author: [name: affiliation:]" to author:
-reference-doc: /Users/ian/.local/share/pandoc/templates/custom.docx
+  - pagebreak.lua
+  - prependAll.rb # prepends institute:, comments: and keywords: metadata into the text
+  - simplifyMetadata.rb #collapse down metadata "author: [name: affiliation:]" to author:
+reference-doc: ${USERDATA}/templates/custom.docx
