--- a/defaults/pdf-prince.yaml
+++ b/defaults/pdf-prince.yaml
@@ -1,3 +1,7 @@
+defaults: html
+css: ${USERDATA}/templates/print.css
+from: markdown
 to: pdf
+output-file: Out.pdf
 pdf-engine: prince
 pdf-engine-opt: ['--page-size=A4']
