--- a/defaults/plain.yaml
+++ b/defaults/plain.yaml
@@ -8,8 +8,8 @@ tab-stop: 4
 eol: lf
 preserve-tabs: true
 filters:
-  - prependAll #prepends institute:, comments: and keywords: metadata into the text
-  - prependAuthor #prepends authors
+  - prependAll.rb #prepends institute:, comments: and keywords: metadata into the text
+  - prependAuthor.rb #prepends authors
 #  - prependAbstract
   - modifyHeadings.lua
 verbosity: INFO
