--- a/defaults/refs.yaml
+++ b/defaults/refs.yaml
@@ -1,14 +1,11 @@
-standalone: true
 verbosity: INFO # verbose by default
+citeproc: true
 cite-method: citeproc
-bibliography: /Users/ian/.local/share/pandoc/Core.json #JSON faster than BIB, symlinked into Pandoc data dir
-csl: /Users/ian/.local/share/pandoc/csl/apa-ian.csl
-filters: 
-  - pandoc-citeproc # process citations
-  - pagebreak.lua # use \newpage{} also for HTML and docx
+bibliography: ${USERDATA}/Core.json #JSON faster than BIB, symlinked into Pandoc data dir
+citation-abbreviations: ${USERDATA}/cite-abbr.json # my journal abbreviations
+csl: ${USERDATA}/csl/cell-doi.csl
 reference-links: true
 metadata:
-  citation-abbreviations: /Users/ian/.local/share/pandoc/cite-abbr.json # my journal abbreviations
-  reference-section-title: References
+  reference-section-title: Bibliography
   notes-after-punctuation: false
   link-citations: true
